--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -62,10 +62,13 @@ file.reference.orsoncharts-1.4-eval-nofx.jar-1=F:\\Apache Tomcat 8.0\\lib\\jfree
 file.reference.orsonpdf-1.6-eval.jar=orsonpdf-1.6-eval.jar
 file.reference.orsonpdf-1.6-eval.jar-1=F:\\Apache Tomcat 8.0\\lib\\jfreechart-1.0.19\\lib\\orsonpdf-1.6-eval.jar
 file.reference.poi-3.17-beta1.jar=poi-3.17-beta1.jar
+file.reference.poi-3.17.jar=poi-3.17.jar
 file.reference.poi-examples-3.17-beta1.jar=poi-examples-3.17-beta1.jar
 file.reference.poi-excelant-3.17-beta1.jar=poi-excelant-3.17-beta1.jar
 file.reference.poi-ooxml-3.17-beta1.jar=poi-ooxml-3.17-beta1.jar
+file.reference.poi-ooxml-3.17.jar=poi-ooxml-3.17.jar
 file.reference.poi-ooxml-schemas-3.17-beta1.jar=poi-ooxml-schemas-3.17-beta1.jar
+file.reference.poi-ooxml-schemas-3.17.jar=poi-ooxml-schemas-3.17.jar
 file.reference.poi-scratchpad-3.17-beta1.jar=poi-scratchpad-3.17-beta1.jar
 file.reference.QuanLyBanHang-src=src
 file.reference.servlet.jar=servlet.jar
@@ -120,7 +123,10 @@ javac.classpath=\
     ${file.reference.orsoncharts-1.4-eval-nofx.jar-1}:\
     ${file.reference.orsonpdf-1.6-eval.jar-1}:\
     ${file.reference.servlet.jar-1}:\
-    ${file.reference.swtgraphics2d.jar-1}
+    ${file.reference.swtgraphics2d.jar-1}:\
+    ${file.reference.poi-3.17.jar}:\
+    ${file.reference.poi-ooxml-3.17.jar}:\
+    ${file.reference.poi-ooxml-schemas-3.17.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
